# UsbDEV

./: AGENTS.md  PLAN.md  bootstrap_codex.bat  bug.md  preflight.py  pyproject.toml  requirements.txt  run_ide.bat
codex_home/: auth.json  config.toml  models_cache.json
codex_home/sessions/2026/01/31/: rollout-2026-01-31T00-06-54-019c1128-d652-7b53-93d7-e8a20251d37c.jsonl  rollout-2026-01-31T01-30-47-019c1175-a13f-7d61-bdc5-8fcf590d3a2f.jsonl  rollout-2026-01-31T01-32-05-019c1176-d194-72b2-a41b-d3c984cf785b.jsonl  rollout-2026-01-31T01-32-31-019c1177-374c-7962-8fac-97338f612866.jsonl  rollout-2026-01-31T01-32-53-019c1177-8c7e-7043-8467-f6a3a433ce3b.jsonl  rollout-2026-01-31T01-53-49-019c118a-b842-7d41-87a3-e88251ab8583.jsonl  rollout-2026-01-31T09-49-45-019c133e-720c-7a72-a847-681a61276ee3.jsonl  rollout-2026-01-31T17-34-54-019c14e8-4ebf-7540-9497-71922ca4398b.jsonl  rollout-2026-01-31T17-36-08-019c14e9-6e84-7f13-b173-8c9a9da11637.jsonl  rollout-2026-01-31T17-44-54-019c14f1-760c-78b0-956d-0bb885ecad06.jsonl  rollout-2026-01-31T17-45-12-019c14f1-bcb0-7250-9f12-f467fe76147b.jsonl  rollout-2026-01-31T18-00-52-019c1500-155d-7a81-8ad8-6fcdf4b853d8.jsonl  rollout-2026-01-31T18-01-20-019c1500-819a-7052-806b-211ed40337b5.jsonl  (+10 more)
codex_home/tmp/path/codex-arg0ixe5jo/: applypatch.bat
tests/: conftest.py  test_app.py  test_encoding.py  test_main.py  test_preflight.py  test_runner.py  test_theme.py
usbide/: __main__.py  app.py  encoding.py  preflight.py  runner.py  usbide.tcss
workspace/client_A/: app.spec  build.bat  requirements.txt
workspace/client_A/src/: main.py
