[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "usbide"
version = "0.1.0"
description = "Mini IDE terminal portable (Textual)"
requires-python = ">=3.10"
dependencies = ["textual[syntax]>=0.60"]

[project.scripts]
usbide = "usbide.__main__:main"
